[package]
name = "web-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.16"
snowboard = { version = "1.0.3", features = ["async"] }
html-node = { version = "0.5.0", features = ["typed", "pretty"] }
const_format = "0.2.32"
chrono = "0.4.31"
